--- a/respo/web-admin-feign-prod.yml
+++ b/respo/web-admin-feign-prod.yml
@@ -11,6 +11,11 @@ spring:
   zipkin:
     base-url: http://localhost:9411
 
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
+
 server:
   port: 8766
 
