--- a/itoken/web-admin-feign-prod.yml
+++ b/itoken/web-admin-feign-prod.yml
@@ -1,29 +1,30 @@
 spring:
   application:
-    name: hello-spring-cloud-web-admin-feign
-  thymeleaf:
-    cache: false
-    mode: LEGACYHTML5
-    encoding: UTF-8
-    servlet:
-      content-type: text/html
-
-  zipkin:
-    base-url: http://localhost:9411
-
+    name: itoken-eureka
   boot:
     admin:
       client:
         url: http://localhost:8084
+  zipkin:
+    base-url: http://localhost:9411
 
 server:
-  port: 8766
+  port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
   client:
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
-feign:
-  hystrix:
-    enabled: true
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health,info
