--- a/itoken/itoken-eureka-dev.yml
+++ b/itoken/itoken-eureka-dev.yml
@@ -15,7 +15,9 @@ eureka:
   instance:
     hostname: localhost
   client:
+    #表示是否将自己注册到Eureka，因为要构建集群环境，需要将自己注册到集群，所以应该开启
     registerWithEureka: false
+    #百世是否从Eureka获取注册信息，如果是单一节点，不需要同步其他Eureka节点，则可以设置成false，但此处为集群的话，应该设置为true
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
